# SourcetrailDB

./: CMakeLists.txt  READER_README.md  relations.md
core/: CMakeLists.txt
core/include/: DatabaseStorage.h  ReferenceKind.h  SourcetrailDBReader.h  SourcetrailDBWriter.h
core/src/: DatabaseStorage.cpp  SourcetrailDBReader.cpp  SourcetrailDBWriter.cpp
examples/code_chunker/: CMakeLists.txt
examples/code_chunker/src/: main.cpp
examples/cpp_api_example/: CMakeLists.txt
examples/cpp_poetry_indexer/: CMakeLists.txt
examples/cpp_reader_example/: CMakeLists.txt
examples/cpp_reader_example/src/: main.cpp
examples/dependency_analyzer/: CMakeLists.txt
examples/dependency_analyzer/src/: main.cpp
examples/test_indexer/: CMakeLists.txt
examples/test_indexer/src/: main.cpp
